{{$NEXT}}
   - fixed spelling back to SYNOPSIS in documentation, argh!

1.2.9     2016-04-01 09:41:28+02:00 Europe/Rome
   - improved Kwalitee
   - fixed spelling of SYNOPSYS in documentation
   - release, 80 PASSes on CPAN Testers (thanks!)

1.2.8     2016-03-31 18:58:15+02:00 Europe/Rome (TRIAL RELEASE)
   - added LEVELNAME_FOR and LEVELID_FOR

1.2.7     2015-03-03 00:10:32 Europe/Rome
   - fixed bug in tests for Windows (paths with backslashes)

1.2.6     2015-01-17 09:28:25 Europe/Rome
   - added multichannel capabilities
   - separated function for actual printing (emit_log())
   - added :no_extra_logdie_message
   - aligned logdie(), logwarn(), etc. to Log::Log4perl::Tiny
   - fixed bug in using Carp functions
   - proper Carp testing
   - solving two issues in Windows testing

1.2.4     2014-12-29 03:38:12 Europe/Rome
   - made test of %r and %R more robust
   - fixed %r and %R to use Time::HiRes when available and set
     time in milliseconds, with added tests (RT85490, thanks Dominique Faure)
   - documented %R (RT85490, thanks Dominique Faure)
   - added file_insecure, file_create and file_append options for
     new() and easy_init() (RT85852, thanks Pedro Davide Assunção)

1.2.3     2013-07-21 17:32:58 Europe/Rome
   - fixed documentation bug for LOGWARN
   - updated Copyright info (years)
   - fixed bug that made "%n" dependent on $/ variable instead
     of being equal to "\n" like in original Log::Log4perl. Thanks
     to clueless-newbie on GitHub
     (https://github.com/polettix/Log-Log4perl-Tiny/pull/3)

1.2.2     2013-04-23 01:42:51 Europe/Rome
   - fixed bugs in logdie & logwarn, now emitting output
     according to behaviour of "real" warn() and die()
   - fixed bugs in template expansion for some codes
   - exclude Log::Log4perl::Tiny from Carp's messages
   - all of the above thanks to Felix Li

1.2.1     2013-04-18 17:50:19 Europe/Rome
   - logwarn/LOGWARN no longer exit, aligning behaviour to what